fixes position of switches so they dont take up extra space

--- a/tsundoku/blueprints/ux/static/css/base.css
+++ b/tsundoku/blueprints/ux/static/css/base.css
@@ -46,3 +46,7 @@ html, body {
     /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
 }
+
+.switch[type=checkbox] {
+    position: fixed !important;
+}
